--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "rm -rf ./build && babel ./code/ --out-dir ./build && mocha ./build/test/"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "node-fetch": "^1.6.3",
-    "node-wit": "^4.2.0"
+    "node-wit": "^4.2.0",
+    "socket.io": "^1.7.1"
   }
 }
